--- a/ArtemisEngineCore/ArtemisEngineCore.vcxproj.filters
+++ b/ArtemisEngineCore/ArtemisEngineCore.vcxproj.filters
@@ -265,6 +265,9 @@
     <ClInclude Include="Include\Game\Screen.h">
       <Filter>Include\Game</Filter>
     </ClInclude>
+    <ClInclude Include="Source\DirectX\PerObjectConstantBuffer.h">
+      <Filter>Source\DirectX</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Windows\GameWindow.cpp">
