--- a/ArtemisEngineCore/ArtemisEngineCore.vcxproj.filters
+++ b/ArtemisEngineCore/ArtemisEngineCore.vcxproj.filters
@@ -271,6 +271,12 @@
     <ClInclude Include="Source\DirectX\VertexShaderObject.h">
       <Filter>Source\DirectX</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Game\Object Management\IUpdateObject.h">
+      <Filter>Source\Game\Object Management</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\Game\World.h">
+      <Filter>Include\Game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Windows\GameWindow.cpp">
@@ -379,6 +385,9 @@
       <Filter>Source\Game</Filter>
     </ClCompile>
     <ClCompile Include="Source\Game\Screen.cpp">
+      <Filter>Source\Game</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Game\World.cpp">
       <Filter>Source\Game</Filter>
     </ClCompile>
   </ItemGroup>
