Fixed broken include directives

--- a/ArtemisEngineCore/ArtemisEngineCore.vcxproj
+++ b/ArtemisEngineCore/ArtemisEngineCore.vcxproj
@@ -154,121 +154,121 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Include\Exceptions\DirectXException.h" />
-    <ClInclude Include="Include\Exceptions\DivideByZeroException.h" />
-    <ClInclude Include="Include\Exceptions\Exception.h" />
-    <ClInclude Include="Include\Exceptions\InvalidArgumentException.h" />
-    <ClInclude Include="Include\Exceptions\InvalidOperationException.h" />
-    <ClInclude Include="Include\Exceptions\NullReferenceException.h" />
-    <ClInclude Include="Include\Exceptions\OutOfRangeException.h" />
-    <ClInclude Include="Include\Game\Application.h" />
-    <ClInclude Include="Include\Game\Camera.h" />
-    <ClInclude Include="Include\Game\Color.h" />
-    <ClInclude Include="Include\Game\GameObject.h" />
-    <ClInclude Include="Include\Game\IDebugStringReturner.h" />
-    <ClInclude Include="Include\Game\IndexBufferData.h" />
-    <ClInclude Include="Include\Game\Input.h" />
-    <ClInclude Include="Include\Game\IntVector2.h" />
-    <ClInclude Include="Include\Game\IntVector3.h" />
-    <ClInclude Include="Include\Game\IntVector4.h" />
-    <ClInclude Include="Include\Game\Key.h" />
-    <ClInclude Include="Include\Game\Math.h" />
-    <ClInclude Include="Include\Game\Matrix.h" />
-    <ClInclude Include="Include\Game\Mesh.h" />
-    <ClInclude Include="Include\Game\Object.h" />
-    <ClInclude Include="Include\Game\Output.h" />
-    <ClInclude Include="Include\Game\Quaternion.h" />
-    <ClInclude Include="Include\Game\SafePtr.h" />
-    <ClInclude Include="Include\Game\Screen.h" />
-    <ClInclude Include="Include\Game\Time\Time.h" />
-    <ClInclude Include="Include\Game\Transform.h" />
-    <ClInclude Include="Include\Game\Vector2.h" />
-    <ClInclude Include="Include\Game\Vector3.h" />
-    <ClInclude Include="Include\Game\Vector4.h" />
-    <ClInclude Include="Include\Game\VertexBufferData.h" />
-    <ClInclude Include="Include\Game\World.h" />
-    <ClInclude Include="Include\Utility\Directory.h" />
-    <ClInclude Include="Include\Utility\Path.h" />
-    <ClInclude Include="Source\DirectX\DepthBuffer.h" />
-    <ClInclude Include="Source\DirectX\DirectXHelper.h" />
-    <ClInclude Include="Source\DirectX\GraphicsDevice.h" />
-    <ClInclude Include="Source\DirectX\IndexBuffer.h" />
-    <ClInclude Include="Source\DirectX\PerObjectConstantBuffer.h" />
-    <ClInclude Include="Source\DirectX\RasterizerState.h" />
-    <ClInclude Include="Source\DirectX\Renderer.h" />
-    <ClInclude Include="Source\DirectX\RenderStateGroups.h" />
-    <ClInclude Include="Source\DirectX\RenderTargetView.h" />
-    <ClInclude Include="Source\DirectX\ShaderLoader.h" />
-    <ClInclude Include="Source\DirectX\SwapChain.h" />
-    <ClInclude Include="Source\DirectX\Texture2D.h" />
-    <ClInclude Include="Source\DirectX\VertexBuffer.h" />
-    <ClInclude Include="Source\DirectX\VertexBufferConverter.h" />
-    <ClInclude Include="Source\DirectX\VertexShaderObject.h" />
-    <ClInclude Include="Source\Formatting\NumberFormatting.h" />
-    <ClInclude Include="Source\Game\Object Management\ComponentContainer.h" />
-    <ClInclude Include="Source\Game\Object Management\GameObjectContainer.h" />
-    <ClInclude Include="Source\Game\Object Management\GlobalObjectManager.h" />
-    <ClInclude Include="Source\Game\Object Management\IComponent.h" />
-    <ClInclude Include="Source\Game\Object Management\IObject.h" />
-    <ClInclude Include="Source\Game\Object Management\IUpdateObject.h" />
-    <ClInclude Include="Source\Game\Object Management\ObjectContainer.h" />
-    <ClInclude Include="Source\Game\Object Management\ObjectCounter.h" />
-    <ClInclude Include="Source\Game\Object Management\SafeObjRef.h" />
-    <ClInclude Include="Source\Game\Rendering\RenderingBufferDataContainer.h" />
-    <ClInclude Include="Source\Maths\DoubleVector2.h" />
-    <ClInclude Include="Source\Maths\DoubleVector3.h" />
-    <ClInclude Include="Source\Maths\DoubleVector4.h" />
-    <ClInclude Include="Source\Maths\FloatVector2.h" />
-    <ClInclude Include="Source\Maths\FloatVector3.h" />
-    <ClInclude Include="Source\Maths\FloatVector4.h" />
-    <ClInclude Include="Source\Maths\GenericMatrix.h" />
-    <ClInclude Include="Source\Maths\Vector2Base.h" />
-    <ClInclude Include="Source\Maths\Vector3Base.h" />
-    <ClInclude Include="Source\Maths\Vector4Base.h" />
-    <ClInclude Include="Source\Maths\VectorBase.h" />
-    <ClInclude Include="Source\Windows\GameWindow.h" />
-    <ClInclude Include="Source\Windows\IWindow.h" />
-    <ClInclude Include="Source\Windows\Window.h" />
-    <ClInclude Include="Source\Windows\WindowProcedure.h" />
+    <ClInclude Include="Private\DirectX\DepthBuffer.h" />
+    <ClInclude Include="Private\DirectX\DirectXHelper.h" />
+    <ClInclude Include="Private\DirectX\GraphicsDevice.h" />
+    <ClInclude Include="Private\DirectX\IndexBuffer.h" />
+    <ClInclude Include="Private\DirectX\PerObjectConstantBuffer.h" />
+    <ClInclude Include="Private\DirectX\RasterizerState.h" />
+    <ClInclude Include="Private\DirectX\Renderer.h" />
+    <ClInclude Include="Private\DirectX\RenderStateGroups.h" />
+    <ClInclude Include="Private\DirectX\RenderTargetView.h" />
+    <ClInclude Include="Private\DirectX\ShaderLoader.h" />
+    <ClInclude Include="Private\DirectX\SwapChain.h" />
+    <ClInclude Include="Private\DirectX\Texture2D.h" />
+    <ClInclude Include="Private\DirectX\VertexBuffer.h" />
+    <ClInclude Include="Private\DirectX\VertexBufferConverter.h" />
+    <ClInclude Include="Private\DirectX\VertexShaderObject.h" />
+    <ClInclude Include="Private\Exceptions\DirectXException.h" />
+    <ClInclude Include="Private\Exceptions\Exception.h" />
+    <ClInclude Include="Private\Game\Object Management\ComponentContainer.h" />
+    <ClInclude Include="Private\Game\Object Management\GameObjectContainer.h" />
+    <ClInclude Include="Private\Game\Object Management\GlobalObjectManager.h" />
+    <ClInclude Include="Private\Game\Object Management\IComponent.h" />
+    <ClInclude Include="Private\Game\Object Management\IObject.h" />
+    <ClInclude Include="Private\Game\Object Management\IUpdateObject.h" />
+    <ClInclude Include="Private\Game\Object Management\ObjectContainer.h" />
+    <ClInclude Include="Private\Game\Object Management\ObjectCounter.h" />
+    <ClInclude Include="Private\Game\Object Management\SafeObjRef.h" />
+    <ClInclude Include="Private\Game\Rendering\RenderingBufferDataContainer.h" />
+    <ClInclude Include="Private\Maths\DoubleVector2.h" />
+    <ClInclude Include="Private\Maths\DoubleVector3.h" />
+    <ClInclude Include="Private\Maths\DoubleVector4.h" />
+    <ClInclude Include="Private\Maths\FloatVector2.h" />
+    <ClInclude Include="Private\Maths\FloatVector3.h" />
+    <ClInclude Include="Private\Maths\FloatVector4.h" />
+    <ClInclude Include="Private\Maths\GenericMatrix.h" />
+    <ClInclude Include="Private\Maths\Vector2Base.h" />
+    <ClInclude Include="Private\Maths\Vector3Base.h" />
+    <ClInclude Include="Private\Maths\Vector4Base.h" />
+    <ClInclude Include="Private\Maths\VectorBase.h" />
+    <ClInclude Include="Private\Windows\GameWindow.h" />
+    <ClInclude Include="Private\Windows\IWindow.h" />
+    <ClInclude Include="Private\Windows\Window.h" />
+    <ClInclude Include="Private\Windows\WindowProcedure.h" />
+    <ClInclude Include="Public\Exceptions\DivideByZeroException.h" />
+    <ClInclude Include="Public\Exceptions\InvalidArgumentException.h" />
+    <ClInclude Include="Public\Exceptions\InvalidOperationException.h" />
+    <ClInclude Include="Public\Exceptions\NullReferenceException.h" />
+    <ClInclude Include="Public\Exceptions\OutOfRangeException.h" />
+    <ClInclude Include="Public\Formatting\NumberFormatting.h" />
+    <ClInclude Include="Public\Game\Application.h" />
+    <ClInclude Include="Public\Game\Camera.h" />
+    <ClInclude Include="Public\Game\Color.h" />
+    <ClInclude Include="Public\Game\GameObject.h" />
+    <ClInclude Include="Public\Game\IDebugStringReturner.h" />
+    <ClInclude Include="Public\Game\IndexBufferData.h" />
+    <ClInclude Include="Public\Game\Input.h" />
+    <ClInclude Include="Public\Game\IntVector2.h" />
+    <ClInclude Include="Public\Game\IntVector3.h" />
+    <ClInclude Include="Public\Game\IntVector4.h" />
+    <ClInclude Include="Public\Game\Key.h" />
+    <ClInclude Include="Public\Game\Math.h" />
+    <ClInclude Include="Public\Game\Matrix.h" />
+    <ClInclude Include="Public\Game\Mesh.h" />
+    <ClInclude Include="Public\Game\Object.h" />
+    <ClInclude Include="Public\Game\Output.h" />
+    <ClInclude Include="Public\Game\Quaternion.h" />
+    <ClInclude Include="Public\Game\SafePtr.h" />
+    <ClInclude Include="Public\Game\Screen.h" />
+    <ClInclude Include="Public\Game\Time.h" />
+    <ClInclude Include="Public\Game\Transform.h" />
+    <ClInclude Include="Public\Game\Vector2.h" />
+    <ClInclude Include="Public\Game\Vector3.h" />
+    <ClInclude Include="Public\Game\Vector4.h" />
+    <ClInclude Include="Public\Game\VertexBufferData.h" />
+    <ClInclude Include="Public\Game\World.h" />
+    <ClInclude Include="Public\Utility\Directory.h" />
+    <ClInclude Include="Public\Utility\Path.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source\DirectX\DepthBuffer.cpp" />
-    <ClCompile Include="Source\DirectX\GraphicsDevice.cpp" />
-    <ClCompile Include="Source\DirectX\IndexBuffer.cpp" />
-    <ClCompile Include="Source\DirectX\RasterizerState.cpp" />
-    <ClCompile Include="Source\DirectX\Renderer.cpp" />
-    <ClCompile Include="Source\DirectX\RenderStateGroups.cpp" />
-    <ClCompile Include="Source\DirectX\RenderTargetView.cpp" />
-    <ClCompile Include="Source\DirectX\ShaderLoader.cpp" />
-    <ClCompile Include="Source\DirectX\SwapChain.cpp" />
-    <ClCompile Include="Source\DirectX\Texture2D.cpp" />
-    <ClCompile Include="Source\DirectX\VertexBuffer.cpp" />
-    <ClCompile Include="Source\Exceptions\Exception.cpp" />
-    <ClCompile Include="Source\Formatting\NumberFormatting.cpp" />
-    <ClCompile Include="Source\Game\Application.cpp" />
-    <ClCompile Include="Source\Game\Camera.cpp" />
-    <ClCompile Include="Source\Game\Color.cpp" />
-    <ClCompile Include="Source\Game\GameObject.cpp" />
-    <ClCompile Include="Source\Game\Input.cpp" />
-    <ClCompile Include="Source\Game\Math.cpp" />
-    <ClCompile Include="Source\Game\Object Management\ComponentContainer.cpp" />
-    <ClCompile Include="Source\Game\Object Management\GameObject.cpp" />
-    <ClCompile Include="Source\Game\Object Management\GlobalObjectManager.cpp" />
-    <ClCompile Include="Source\Game\Object Management\Object.cpp" />
-    <ClCompile Include="Source\Game\Object Management\ObjectCounter.cpp" />
-    <ClCompile Include="Source\Game\Output.cpp" />
-    <ClCompile Include="Source\Game\Quaternion.cpp" />
-    <ClCompile Include="Source\Game\Rendering\Mesh.cpp" />
-    <ClCompile Include="Source\Game\Screen.cpp" />
-    <ClCompile Include="Source\Game\Time.cpp" />
-    <ClCompile Include="Source\Game\Transform.cpp" />
-    <ClCompile Include="Source\Game\World.cpp" />
-    <ClCompile Include="Source\Maths\DoubleVector3.cpp" />
-    <ClCompile Include="Source\Utility\Directory.cpp" />
-    <ClCompile Include="Source\Utility\Path.cpp" />
-    <ClCompile Include="Source\Windows\GameWindow.cpp" />
-    <ClCompile Include="Source\Windows\Window.cpp" />
-    <ClCompile Include="Source\Windows\WindowProcedure.cpp" />
+    <ClCompile Include="Private\DirectX\DepthBuffer.cpp" />
+    <ClCompile Include="Private\DirectX\GraphicsDevice.cpp" />
+    <ClCompile Include="Private\DirectX\IndexBuffer.cpp" />
+    <ClCompile Include="Private\DirectX\RasterizerState.cpp" />
+    <ClCompile Include="Private\DirectX\Renderer.cpp" />
+    <ClCompile Include="Private\DirectX\RenderStateGroups.cpp" />
+    <ClCompile Include="Private\DirectX\RenderTargetView.cpp" />
+    <ClCompile Include="Private\DirectX\ShaderLoader.cpp" />
+    <ClCompile Include="Private\DirectX\SwapChain.cpp" />
+    <ClCompile Include="Private\DirectX\Texture2D.cpp" />
+    <ClCompile Include="Private\DirectX\VertexBuffer.cpp" />
+    <ClCompile Include="Private\Exceptions\Exception.cpp" />
+    <ClCompile Include="Private\Formatting\NumberFormatting.cpp" />
+    <ClCompile Include="Private\Game\Application.cpp" />
+    <ClCompile Include="Private\Game\Camera.cpp" />
+    <ClCompile Include="Private\Game\Color.cpp" />
+    <ClCompile Include="Private\Game\GameObject.cpp" />
+    <ClCompile Include="Private\Game\Input.cpp" />
+    <ClCompile Include="Private\Game\Math.cpp" />
+    <ClCompile Include="Private\Game\Object Management\ComponentContainer.cpp" />
+    <ClCompile Include="Private\Game\Object Management\GameObject.cpp" />
+    <ClCompile Include="Private\Game\Object Management\GlobalObjectManager.cpp" />
+    <ClCompile Include="Private\Game\Object Management\Object.cpp" />
+    <ClCompile Include="Private\Game\Object Management\ObjectCounter.cpp" />
+    <ClCompile Include="Private\Game\Output.cpp" />
+    <ClCompile Include="Private\Game\Quaternion.cpp" />
+    <ClCompile Include="Private\Game\Rendering\Mesh.cpp" />
+    <ClCompile Include="Private\Game\Screen.cpp" />
+    <ClCompile Include="Private\Game\Time.cpp" />
+    <ClCompile Include="Private\Game\Transform.cpp" />
+    <ClCompile Include="Private\Game\World.cpp" />
+    <ClCompile Include="Private\Maths\DoubleVector3.cpp" />
+    <ClCompile Include="Private\Utility\Directory.cpp" />
+    <ClCompile Include="Private\Utility\Path.cpp" />
+    <ClCompile Include="Private\Windows\GameWindow.cpp" />
+    <ClCompile Include="Private\Windows\Window.cpp" />
+    <ClCompile Include="Private\Windows\WindowProcedure.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
