--- a/Game/Renderer/Renderer.vcxproj.filters
+++ b/Game/Renderer/Renderer.vcxproj.filters
@@ -19,12 +19,18 @@
     <ClInclude Include="Source\RendererCore.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Texture.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Renderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Source\SDLException.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Texture.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
